argocd/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`qbittorrent.yggdrasil.mia.cx`)
      kind: Rule
      middlewares:
        - name: internal-only
          namespace: kube-system
      services:
        - name: qbittorrent
          port: 8080
  tls: {}
